completed initial pass on emphasis and lists.

--- a/style-guide/index.html
+++ b/style-guide/index.html
@@ -339,24 +339,32 @@
     <h3>Lists and Outline Style</h3>
       <section id="h_punctuation_lists_general_principles" class="ok">
       <h4>Lists and outlines—general principles</h4>
-      <p>Lists with item markers are a common practice found in modern Ethiopic writing.  Lists may be ordered and use Ethiopic or Arabic numerals, or alphabetical applying the Ethiopic syllabary in keeping with the language of the document.  Unordered lists are also used applying basic geometrical shapes such as circles and squares, solid or hollow, or more decorative shapes at the author’s discretion. Lists may be formatted vertically, vertically and multi-level, or inline (AKA “run-in”) and single level.</p>
+      <p>Lists with item markers are a common practice found in modern Ethiopic writing.  Lists may be ordered where the sequence is important and applies a “counter” that is numerical using either Ethiopic or Arabic numerals, or alphabetical applying the Ethiopic syllabary in keeping with the language of the document.  Unordered lists are also used applying basic geometrical shapes such as circles and squares, solid or hollow, or more decorative shapes at the author’s discretion. Lists may be formatted vertically, vertically and multi-level, or inline (AKA “run-in”) and single level.</p>
 
       <p>Style guides provide recommendations for the logical grouping of items within a list and for forming the phrases of the listed items and detail rules for their internal punctuation. In this section we focus only on formatting and positioning rules that computer software would automate for an author. List discussed here are lists that occur in text and does not apply to table of contents, lists of illustrations, lists of tables, glossaries or indexes.  These more specific kinds of lists are discussed in other sections.</p>
       </section>
       <section id="h_punctuation_lists_run_ins_versus_vertical+lists" class="ok">
       <h4>Run-in versus vertical lists</h4>
+      <p>Two list layout orientations can be used. A list maybe laid out vertically, in a new paragraph with one list item per line. A list may also be presented horizontally within a sentence (known as “run-in” or “inline” lists).  Run-in lists are more appropriate when the listed items are relatively short and the list forms a sentence with the introductory text (see <a href="#h_punctuation_lists_run_ins_lists"></a>).  List where the items may be longer phrases or full sentences, or have multiple levels, should be set vertically (see <a href="#h_punctuation_lists_vertical_lists_punctuated"></a>).</p>
       </section>
       <section id="h_punctuation_lists_run_ins_lists" class="ok">
       <h4>Run-in lists</h4>
+      <p>When letters or Ethiopic numerals are used to mark the items in a run-in list they should be followed by a slash, “/”. If western numbers are used
+      to form a list, a dot “.” maybe used in place of slash. If the introductory material forms a grammatically complete sentence, a preface colon, “፦”, should precede the first listed item.</p>
+      <p><em>(needs review)</em> Listed items should be separated by a comma, “፣”, unless item text also requires a comma, then semicolon, “፤”, should be used instead.</p>
+      <p><em>TBD: Review for enclosing parenthesis use and enclosing double slash like /ሀ/</em></p>
       </section>
-      <section id="h_punctuation_lists_format" class="ok">
+      <section id="h_punctuation_lists_vertical_format" class="ok">
       <h4>Vertical lists punctuation, and format</h4>
+      <p>A vertical list is best introduced by a grammatically complete sentence, followed by a preface colon, “፦”.  The list that follows may then
+be either ordered or unordered as introduced in Section <a href="#h_punctuation_lists_general_principles"></a>.
+If the list is unordered no end punctuation is needed unless the content forms a complete sentence.</p>
       </section>
       <section id="h_punctuation_lists_vertical_lists_punctuated" class="ok">
       <h4>Vertical lists punctuated as a sentence</h4>
       <p>When vertical list items complete the sentence of the introductory text,
          commas or semicolons may be used between the items, and a period should follow the final item.
-         Optionally, the introductory paragraph may continue inline following the final list item as depecited in
+         Optionally, the introductory paragraph may continue inline following the final list item as depicted in
          <a href="#fig_punctuation_lists_vertical_lists_punctuated"></a>:
       </p>
 <p>
@@ -377,7 +385,9 @@
       </section>
       <section id="h_punctuation_lists_vertical_lists_multilevel" class="ok">
       <h4>Vertical lists with multiple levels (outlines)</h4>
-
+      <p>Where items in an ordered list introduce an additional list, both numerals and letters may be used.  In keeping with the main list,
+         any run over lines from the inner list items should be aligned with the first word following the item marker.</p>
+      <p><em>TBD: discuss change in list item counter, and list item marker at inner levels</em></p>
       <figure id="fig_punctuation_lists_vertical_lists_multilevel" style="text-align:left;">
       <ul style="list-style-type:none">
        <li>ሀ/ ስጋ
@@ -438,14 +448,51 @@
 
   <section id="h_emphasis">
   <h2>Emphasis</h2>
+    <p>Emphasis can be expressed in a number of common approaches such as italics, boldface and underscore which maintain the
+       same underlying typeface.  In past eras that predate digital publishing, a change in the font size as well as to the
+       underlying typeface, are more common approaches. This section provides guidance on applying the various approaches to
+       emphasis.</p>
+    <section id="h_emphasis_reproduction" class="ok">
+    <h3>Emphasis in republished works</h3>
+       <p>When a pre-digital or early digital work is reproduced with modern software, it is recommended that the style of emphasis
+       used in the original work be preserved in the updated form. Unless it can be determined that a particular style of emphasis
+       because a technical limitation did not allow for a preferred style of emphasis to be employed.  In this case the change of
+       emphasis style would be acceptable as it reflects the intent of the author.  For example, underlined text should not be changed
+       to italics in a republishing of a work unless it is known that the author had desired italics emphasis but it was unavailable
+       at the time.</p>
+    </section>
     <section id="h_emphasis_italic" class="ok">
     <h3>Italics for emphasis</h3>
+       <p>In works using a modern, thin weight, typeface, italic text may be used effectively for emphasis.</p>
     </section>
     <section id="h_emphasis_boldface" class="ok">
     <h3>Boldface for emphasis</h3>
+       <p>In works using the classic, heavy typeface, bold emphasis should not be used as it can be difficult to
+       distinguish from the regular weight. An exception is found when a classic typeface is specifically designed for the bold
+       appearance, in which case it is most suitable for chapter and section titles.</p>
+       <p>In works using a modern, thinner weight, typefaces, emboldened text may be used effectively for emphasis and is most
+       appropriate for chapter and section titles. When the typeface
+       used to render a document will be unknown, boldface should be avoided emphasis in favor of underline or italics.</p>
     </section>
     <section id="h_emphasis_underscore" class="ok">
     <h3>Underscore for emphasis</h3>
+       <p>Underscore (also called “underline”) is a more appropriate form of emphasis for the classic weight typeface and has some
+       historic precedence in Ethiopic publishing, particularly where only a single typeface was available. When a document uses underscore for a
+       special purpose, such as to denote a the presence of a hyperlink, underscore should then be avoided in favor of italics.</p>
+    </section>
+    <section id="h_emphasis_inline_size_change" class="ok">
+    <h3>Size change for emphasis</h3>
+       <p>In works where only a single typeface could be used, emphasis expressed mid-sentence is sometimes shown by enlarging the font size by around 25%
+       of the regular height.  Increasing the text size is sometimes used as an alternative to boldface or in a way analogous to “All Caps” in western
+       writing.  The approach should primarily be used only when reproducing a work where it has been applied in the original publication.
+       Text size change may used cautiously when it has been determined that another form of emphasis is unsuitable.</p>
+    </section>
+    <section id="h_emphasis_manuscript_typeface" class="ok">
+    <h3>Typeface change for emphasis</h3>
+       <p>In some older, pre-digital, works emphasis can be shown by changing the typeface from the classic (“Zemen”) style to an even older
+       style as would be found in manuscripts and early mechanical publishing.  The typeface style change might also be accompanied by a
+       change in text height.  It is recommended that this approach only be used only when reproducing a work where it has been applied in the
+       original publication. The change to a manuscript style typeface can be used in lieu of a suitable italic typeface.</p>
     </section>
   </section><!-- end of Emphasis section -->
 
