fix(?) to "This version" link.

--- a/style-guide/index.html
+++ b/style-guide/index.html
@@ -17,7 +17,7 @@
 		noRecTrack:           true,
 		shortName:            "elreq-style-guide",
 		copyrightStart: 	"2019",
-		edDraftURI:   		"https://w3c.github.io/elreq/",
+		edDraftURI:   		"https://w3c.github.io/elreq/style-guide/",
 	
 		// if this is a LCWD, uncomment and set the end of its review period
 		// lcEnd: "2009-08-05",
