lang spanners added to apply Abyssinica font.

--- a/style-guide/index.html
+++ b/style-guide/index.html
@@ -363,8 +363,8 @@
       <section id="h_punctuation_lists_run_ins_lists" class="ok">
       <h4>Run-in lists</h4>
       <p>When letters or Ethiopic numerals are used to mark the items in a run-in list they should be followed by a slash, “/”. If western numbers are used
-      to form a list, a dot “.” maybe used in place of slash. If the introductory material forms a grammatically complete sentence, a preface colon, “፦”, should precede the first listed item.</p>
-      <p><em>(needs review)</em> Listed items should be separated by a comma, “፣”, unless item text also requires a comma, then semicolon, “፤”, should be used instead.</p>
+      to form a list, a dot “.” maybe used in place of slash. If the introductory material forms a grammatically complete sentence, a preface colon, “<span lang="am">፦</span>”, should precede the first listed item.</p>
+      <p><em>(needs review)</em> Listed items should be separated by a comma, “<span lang="am">፣</span>”, unless item text also requires a comma, then semicolon, “<span lang="am">፤</span>”, should be used instead.</p>
       <p><em>TBD: Review for enclosing parenthesis use and enclosing double slash like /ሀ/</em></p>
       </section>
       <section id="h_punctuation_lists_vertical_format" class="ok">
@@ -382,6 +382,7 @@ If the list is unordered no end punctuation is needed unless the content forms a
       </p>
 <p>
       <figure id="fig_punctuation_lists_vertical_lists_punctuated" style="text-align:left;">
+<span lang="am">
 ድጓ ቅስዱ ያሬድ ከደረሳቸው ፭ቱ ጸዋትወ ዜማዎች አንዱና የመጀመሪያው ነው። ፭ቱም በዝርዝር ሲገለጹ፦
 <div style="margin-left: 20px;">
 ሀ/ ድጓ፣<br/>
@@ -392,6 +393,7 @@ If the list is unordered no end punctuation is needed unless the content forms a
 ቀደም ብለን የገለጽን ስለሆነ ከረጅሙ በአጭሩ፣ ድጓ ስለሚለው  ብቻ ለመግለጽ እንሞክራለን። 
 “ድጓ” የሚለው ቃል የዜማ መጽሐፍ ስም ሲሆን ቅዱስ ያሬድ በአምስተኛውና በስድስተኛው  መቶ  ዓመት ላይ በዓፄ  ገ/መስቀል ዘመነ መንግሥት በመንፈስ ቅዱስ  እየተመራ የደረሰውና ያዜመው ነው።
 </p>
+</span>
         <figcaption>Punctuation of a vertical list with paragraph continuation.  <em>TBD: Ref ድጓ መግለጫ </em></figcaption>
       </figure>
 
@@ -402,6 +404,7 @@ If the list is unordered no end punctuation is needed unless the content forms a
          any run over lines from the inner list items should be aligned with the first word following the item marker.</p>
       <p><em>TBD: discuss change in list item counter, and list item marker at inner levels</em></p>
       <figure id="fig_punctuation_lists_vertical_lists_multilevel" style="text-align:left;">
+<span lang="am">
       <ul style="list-style-type:none">
        <li>ሀ/ ስጋ
          <ul style="list-style-type:none">
@@ -436,14 +439,15 @@ If the list is unordered no end punctuation is needed unless the content forms a
          </ul>
        </li>
       </ul>
+</span>
         <figcaption>A multilevel Ethiopic ordered list.</figcaption>
       </figure>
       </section>
       <section id="h_punctuation_lists_ordered_list_counter_suffix" class="ok">
       <h4>Ordered list counter suffix</h4>
-      <p>The list “counter” is the number or letter that begins a list entry (e.g. “3”, “፫” or “ሐ”). The “list counter suffix” (also called the “list item marker”) is the symbol that follows, or in some case surrounds, the counter.  For example: “.”, “/” or “()” in “3.”, “፫/” and “(ሐ)”.</p>
+      <p>The list “counter” is the number or letter that begins a list entry (e.g. “3”, “<span lang="am">፫</span>” or “<span lang="am">ሐ</span>”). The “list counter suffix” (also called the “list item marker”) is the symbol that follows, or in some case surrounds, the counter.  For example: “.”, “/” or “()” in “3.”, “<span lang="am">፫/</span>” and “(<span lang="am">ሐ</span>)”.</p>
 
-      <p>The recommended counter suffix for Ethiopic text in any language is the slash “/” symbol.  Slash is recommended as the default suffix while authors are allowed to easily switch to a common alternative such as “፦”, “.”, “)” and “፡”. </p>
+      <p>The recommended counter suffix for Ethiopic text in any language is the slash “/” symbol.  Slash is recommended as the default suffix while authors are allowed to easily switch to a common alternative such as “<span lang="am">፦</span>”, “.”, “)” and “<span lang="am">፡</span>”. </p>
       </section>
       <section id="h_punctuation_lists_counter_suffix_alignment" class="ok">
       <h4>List counter suffix alignment</h4>
