two more spanners added.

--- a/style-guide/index.html
+++ b/style-guide/index.html
@@ -365,11 +365,11 @@
       <p>When letters or Ethiopic numerals are used to mark the items in a run-in list they should be followed by a slash, “/”. If western numbers are used
       to form a list, a dot “.” maybe used in place of slash. If the introductory material forms a grammatically complete sentence, a preface colon, “<span lang="am">፦</span>”, should precede the first listed item.</p>
       <p><em>(needs review)</em> Listed items should be separated by a comma, “<span lang="am">፣</span>”, unless item text also requires a comma, then semicolon, “<span lang="am">፤</span>”, should be used instead.</p>
-      <p><em>TBD: Review for enclosing parenthesis use and enclosing double slash like /ሀ/</em></p>
+      <p><em>TBD: Review for enclosing parenthesis use and enclosing double slash like /<span lang="am">ሀ</span>/</em></p>
       </section>
       <section id="h_punctuation_lists_vertical_format" class="ok">
       <h4>Vertical lists punctuation, and format</h4>
-      <p>A vertical list is best introduced by a grammatically complete sentence, followed by a preface colon, “፦”.  The list that follows may then
+      <p>A vertical list is best introduced by a grammatically complete sentence, followed by a preface colon, “<span lang="am">፦</span>”.  The list that follows may then
 be either ordered or unordered as introduced in Section <a href="#h_punctuation_lists_general_principles"></a>.
 If the list is unordered no end punctuation is needed unless the content forms a complete sentence.</p>
       </section>
