Updates to the quotation section.

--- a/style-guide/index.html
+++ b/style-guide/index.html
@@ -135,9 +135,11 @@
       </section>
       <section id="h_punctuation_relation_to_closing_quotation_marks" class="ok">
       <h4>Other punctuation in relation to closing quotation marks</h4>
+      <p>Colons and semicolons—unlike periods and commas—follow closing quotation marks; question marks and exclamation points follow closing quotation marks unless they belong within the quoted matter.</p>
       </section>
       <section id="h_punctuation_single_quotation_marks_next_to_double" class="ok">
       <h4>Single quotation marks next to double quotation marks</h4>
+      <p>When single quotation marks are nested within double quotation marks, and two of the marks appear next to each other, a space between the two marks, though not strictly required, aids legibility. For print publications, typesetters may place a thin space or a hair space between the two marks (as in the print edition of this manual). In electronic environments (including manuscripts submitted for publication), a nonbreaking space can be used (as in the online edition of this manual); such a space will prevent the second mark from becoming stranded at the beginning of a new line.</p>
       </section>
     </section>
     <section id="h_punctuation_periods" class="ok">
@@ -298,24 +300,33 @@
       </section>
     </section>
     <section id="h_punctuation_quotation_marks" class="ok">
-    <h3>Quotation Marks</h3>
+    <h3>Speech Quotation</h3>
+      <p>Guillemets pointing outwards («like this») are the preferred marks to indicated speech.
+         Double quotes, in directional “smart” styling, may be used when guillemets are not available to a writer,
+         but should otherwise be avoided. Favoring guillemets over quotation marks is both in keeping with
+         pre-digital publishing and avoids confusion with the role of apostrophe (see <a href="#h_punctuation_apostrophe_use_of"></a>).</p>
       <section id="h_punctuation_quotation_marks_relative_to_other" class="ok">
       <h4>Quotation marks relative to other punctuation and text</h4>
+      <p>In keeping with parentheses and brackets (<a href="#h_punctuation_brackets_and_braces"></a>), guillemets marks should appear in the same font style, regular  or italic, as the surrounding text and not the style of the text enclosed.</p>
       </section>
-      <section id="h_punctuation_quotation_marks_smart" class="ok">
-      <h4>“Smart” quotation marks</h4>
+      <section id="h_punctuation_quotation_marks_inner" class="ok">
+      <h4>Inner quotation marks</h4>
+      <p>Inner quotation should be indicated with single guillemets (‹ and ›).</p>
       </section>
     </section>
     <section id="h_punctuation_apostrophe" class="ok">
     <h3>Apostrophes</h3>
       <section id="h_punctuation_apostrophe_use_of" class="ok">
       <h4>Use of the apostrophe</h4>
+      <p>Apostrophe (’) is an important symbol to modern Tigrinya that is applied between
+      words in a contraction. If the second word begins with a vowel, it will be dropped. Apostrophe is then
+      thought of as taking the place of a silent vowel.  No other use of apostrophe in the Ethiopic context is known.</p>
       </section>
       <section id="h_punctuation_apostrophe_smart" class="ok">
       <h4>“Smart” apostrophes</h4>
-      </section>
-      <section id="h_punctuation_apostrophe_relative_to_other" class="ok">
-      <h4>Apostrophes relative to other punctuation</h4>
+      <p>In published works the direcitonal “smart” (or “curly”) apostrophe should be used. This apostrophe
+      appears like a raised western comma and should be in the same typeface weight as the letters that will
+      surround it in a contraction.</p>
       </section>
     </section>
     <section id="h_punctuation_spaces" class="ok">
