--- a/index.html
+++ b/index.html
@@ -1609,8 +1609,13 @@
         </ol>
       </div>
     </section>
+	  </section>
 
-    </section>
+    <section id="styling_initials">
+    <h3>Styling initials</h3>
+	
+	<p>Although initial letter styling is not an innate feature of the Ethiopic script, there have been occurrences of its usage noted. However, the specifications and guidelines for composition of these decorative elements are undefined or insubstantial.</p>
+   </section>
   </section>
 
   <section id="h_pages">
