Updates to section 5 (Numbers).

--- a/style-guide/index.html
+++ b/style-guide/index.html
@@ -544,8 +544,27 @@ If the list is unordered no end punctuation is needed unless the content forms a
 
   <section id="h_numbers">
   <h2>Numbers</h2>
+    <p>Both the Ethiopic and Western (aka Hind-Arabic) numeral systems are important in Ethiopic writing. The numeric
+       context will exclude one or the other system, or make either optional but one system preferred.  For example,
+       westernn numerals are the clear choice for phone numbers, fractions, decimal number and other calculated quantities.
+       While literature in the Ge’ez language should preclude the use of western numerals.  Cardinal numbers used for
+       counting chapters and page numbers may use either system with Ethiopic being the preferred.</p>
       <section id="h_numbers_comma" class="ok">
       <h3>Comma between digits</h3>
+      <p>The Western comma is used between groups of three numbers for values over ten thousand.</p>
+      <p class="example">
+        1000<br/>
+        9617<br/>
+        59,617<br/>
+        2,000,700
+      </p>
+      <p>Commas are not used with Ethiopic numbers when expressing quantities.
+
+      <p>The Ethiopic ecclesiastical comma is expected when referencing Biblical verses with Either western or Ethiopic numerals:
+      <p class="example">
+        ዮሐ  5፥12<br/>
+        ዮሐ  ፭፥፲፪
+      </p>
       </section>
       <section id="h_numbers_decimal_marker" class="ok">
       <h3>The decimal marker</h3>
@@ -558,6 +577,11 @@ If the list is unordered no end punctuation is needed unless the content forms a
       </section>
       <section id="h_numbers_percentages" class="ok">
       <h3>Percentages</h3>
+      <!-- See notes with convention comparison here: https://english.stackexchange.com/questions/3281/should-there-be-a-space-before-a-percent-sign -->
+      <p>Percentages should be expressed in western numerals and not words (e.g. “ሃምሳ ስድስት“ ) with an exception made at the start of a sentence.
+      The word “ፐርሰንት” following the numeral(s) is preferred in nontechnical prose. The percent symbol, “%”, after the numeric  value
+      is preferred when presenting statistical or scientific study findigns. The percent symbol should follow the last digit immediately
+      with no preceding space symbol.</p>
       </section>
       <section id="h_numbers_fractions" class="ok">
       <h3>Decimal fractions</h3>
@@ -570,9 +594,17 @@ If the list is unordered no end punctuation is needed unless the content forms a
       </section>
       <section id="h_numbers_page" class="ok">
       <h3>Page Numbers</h3>
+      <p>The audience should be considered when selecting a numeral system for page numbers. For a broad multilingual audience where Amharic
+         or Tigirnya will be a second language, Western numerals would be better understood.
+         When an Amharic or Tigrinya speakers are the primary audience, page numbers should be in Ethiopic numerals unless Western numerals are
+         the dominant system in contexts such as chapter numbers.</p>
+      <p>When there is uncertainty over the audience’s grasp of the Ethiopic numeral systems, the recommended practice is to place the Ethiopic
+         numerals at the outer margin and Western numerals at the inner margin.</p>
       </section>
       <section id="h_numbers_chapter" class="ok">
       <h3>Chapter Numbers</h3>
+      <p>Chapter numbers should be in Ethiopic numerals.  When numbered sections are important western numerals should then be used.</p>
+      <p><strong><i>Review this with corpus and the use of alphabetic sections</i></strong></p>
       </section>
       <section id="h_numbers_currency" class="ok">
       <h3>Currency</h3>
